# BancoClima

./: .env  DataAnalysis.ipynb  README.md  Untitled.ipynb  main.py  pyproject.toml  sp.parquet
Files/: pontos_sp.dbf  pontos_sp.geojson  pontos_sp.shp  pontos_sp.shx  pontos_sp_json.geojson  pontos_sp_teste.parquet  sp.geojson  sp.parquet  stations_inmet.csv  stations_inmet.parquet  stations_inmet_sp.parquet
ppt/: datetime_helper.py  earth_engine_helper.py  transformations.py
ppt/config/: parameters.py
ppt/config/database/: connector.py  tables.py
