[tool.poetry]
name = "ppt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
requests = "^2.31.0"
geemap = "^0.32.0"
ipykernel = "^6.29.4"
jupyterlab = "^4.1.6"
setuptools = "^69.5.1"
earthengine-api = "^0.1.399"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
